--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"grunt-contrib-copy": "~0.4.1",
 		"grunt-contrib-jshint": "~0.4.1",
 		"grunt-contrib-uglify": "~0.2.7",
-		"grunt-contrib-watch": "~0.5.3"
+		"grunt-contrib-watch": "~0.5.3",
+		"grunt-gh-pages": "~0.9.0"
 	}
 }
