--- a/demo/demo-web/package.json
+++ b/demo/demo-web/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "presentation.frontend.demo-web",
 	"version": "0.1.0",
+	"private": true,
 
 	"devDependencies": {
 		"grunt": "~0.4.2",
-		"ember-template-compiler": "~1.3.0-beta.2",
+		"ember-template-compiler": "~1.3.0-beta.4",
 		"grunt-contrib-compass": "~0.7.0",
 		"grunt-contrib-concat": "~0.3.0",
 		"grunt-contrib-connect": "~0.5.0",
@@ -13,6 +14,6 @@
 		"grunt-contrib-uglify": "~0.2.7",
 		"grunt-contrib-watch": "~0.5.3",
 		"grunt-ember-templates": "~0.4.18",
-		"handlebars": "~1.1.2"
+		"handlebars": "~1.2.1"
 	}
 }
