--- a/demo/demo-web/bower.json
+++ b/demo/demo-web/bower.json
@@ -7,11 +7,13 @@
 		"bootstrap-sass": "~3.0.2",
 		"ember": "~1.2.0",
 		"ember-data": "1.0.0-beta.4",
+		"floating-label": "~0.2.0",
 		"font-awesome": "~4.0.3",
 		"jquery": "~2.0.3",
 		"jke-d3-calendar": "git@github.com:joakimkemeny/jke.d3.calendar.git",
 		"jke-d3-ecg": "git@github.com:joakimkemeny/jke.d3.ecg.git",
 		"lodash": "~2.4.1",
-		"moment": "~2.4.0"
+		"moment": "~2.5.0",
+		"stomp-websocket": "~2.3.0"
 	}
 }
