--- a/demo/demo-server/build.gradle
+++ b/demo/demo-server/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath('org.springframework.boot:spring-boot-gradle-plugin:0.5.0.M7')
+        classpath('org.springframework.boot:spring-boot-gradle-plugin:0.5.0.BUILD-SNAPSHOT')
     }
 }
 
@@ -28,8 +28,8 @@ dependencies {
     compile('com.h2database:h2:1.3.174')
     compile('org.hibernate:hibernate-entitymanager:4.3.0.Final')
     compile('org.springframework:spring-messaging:4.0.0.RELEASE')
-    compile('org.springframework.boot:spring-boot-starter-web:0.5.0.M7')
-    compile('org.springframework.boot:spring-boot-starter-websocket:0.5.0.M7')
+    compile('org.springframework.boot:spring-boot-starter-web:0.5.0.BUILD-SNAPSHOT')
+    compile('org.springframework.boot:spring-boot-starter-websocket:0.5.0.BUILD-SNAPSHOT')
     compile('org.springframework.data:spring-data-jpa:1.4.3.RELEASE')
     compile('org.springframework:spring-orm:4.0.0.RELEASE')
     compile('org.thymeleaf:thymeleaf-spring4:2.1.2.RELEASE')
