--- a/.jshintrc
+++ b/.jshintrc
@@ -5,7 +5,6 @@
 	"eqeqeq": true,
 	"forin": true,
 	"immed": true,
-	"indent": 4,
 	"latedef": "nofunc",
 	"newcap": true,
 	"noarg": true,
@@ -20,7 +19,6 @@
 
 	"globals": {
 		"$": false,
-		"_": false,
-		"Ember": false
+		"_": false
 	}
 }
